# homework_oop

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: category.py  product.py
src/products/: category.py
src/tests/: test_product.py  tests_category.py
tests/: test_category.py  test_product.py
